docs/versions/v1.2.1/기능정의서.md
# mobimobi 기능정의서 v1.2.1

> 마비노기 숙제 트래커  
> 최종 수정일: 2026-05-26

---

## 목차

1. [인증 기능](#1-인증-기능)
2. [캐릭터 관리](#2-캐릭터-관리)
3. [숙제 관리 (일일/주간)](#3-숙제-관리-일일주간)
4. [구매 관리](#4-구매-관리)
5. [물물교환 관리](#5-물물교환-관리)
6. [임무게시판 관리](#6-임무게시판-관리)
7. [프리셋 관리](#7-프리셋-관리)
8. [데이터 관리](#8-데이터-관리)
9. [리셋 시스템](#9-리셋-시스템)
10. [UI/UX 기능](#10-uiux-기능)
11. [파일 구조](#11-파일-구조)
12. [데이터 모델](#12-데이터-모델)
13. [기본 데이터 목록](#13-기본-데이터-목록)
14. [관리자 기능](#14-관리자-기능)

---

## 1. 인증 기능

### FN-AUTH-001. Google 로그인
| 항목 | 내용 |
|------|------|
| 설명 | Firebase Auth를 통한 Google OAuth 로그인 |
| 트리거 | 로그인 화면에서 "구글 계정으로 로그인" 버튼 클릭 |
| 동작 | Google 팝업 인증 -> Firebase Auth 토큰 발급 -> Firestore 연동 |
| 결과 | 메인 대시보드로 이동, 프로필 아이콘 표시 |
| 오류 표시 | 승인 도메인 누락, 팝업 닫힘, 팝업 차단 등 주요 실패 사유를 화면에 표시 |

### FN-AUTH-002. 비로그인 (게스트 모드)
| 항목 | 내용 |
|------|------|
| 설명 | 계정 없이 로컬 데이터만으로 사용 |
| 트리거 | "비로그인으로 계속하기" 버튼 클릭 |
| 동작 | localStorage에 `mobimobi_guest` 플래그 설정 |
| 결과 | 메인 대시보드 이동, 헤더에 내보내기/가져오기/설정 아이콘 표시 |
| 제한 | 브라우저 한정, 쿠키 삭제 시 데이터 유실 가능 |

### FN-AUTH-003. 로그아웃
| 항목 | 내용 |
|------|------|
| 설명 | 현재 세션 종료 및 로그인 화면으로 복귀 |
| 트리거 | 설정(ProfileModal) > "로그인 화면으로" 버튼 클릭 |
| 동작 | 경고 모달 표시 -> 확인 시 localStorage 클리어 + Firebase signOut |
| 주의 | 로그아웃 전 데이터 백업 권장 안내 (경고 모달) |

### FN-AUTH-004. 계정 삭제
| 항목 | 내용 |
|------|------|
| 설명 | Firebase 계정 및 관련 데이터 영구 삭제 |
| 트리거 | 설정 > 계정 삭제 버튼 |
| 동작 | Firestore 데이터 삭제 + Firebase Auth 계정 삭제 |
| 비가역 | 복구 불가 |

---

## 2. 캐릭터 관리

### FN-CHAR-001. 캐릭터 생성
| 항목 | 내용 |
|------|------|
| 설명 | 새 캐릭터 등록 |
| 트리거 | 캐릭터 탭의 "+" 버튼 클릭 |
| 입력 | 서버, 캐릭터명, 메인 클래스 계열, 세부 직업 |
| 제한 | 서버당 최대 6캐릭터 |
| 동작 | 캐릭터 생성 + 현재 리스트 템플릿 복사. 현재 리스트가 비어 있으면 빈 리스트로 생성 |

### FN-CHAR-002. 캐릭터 수정
| 항목 | 내용 |
|------|------|
| 설명 | 기존 캐릭터 정보 편집 |
| 트리거 | 캐릭터 탭에서 캐릭터 길게 누르기 또는 편집 버튼 |
| 수정 가능 | 서버, 캐릭터명, 메인 클래스, 세부 직업 |

### FN-CHAR-003. 캐릭터 삭제
| 항목 | 내용 |
|------|------|
| 설명 | 캐릭터 및 연관 데이터 삭제 |
| 트리거 | 캐릭터 편집 모달에서 삭제 버튼 |
| 동작 | 캐릭터 + 해당 캐릭터의 모든 숙제/구매/물물교환/임무게시판 데이터 삭제 |

### FN-CHAR-004. 캐릭터 순서 변경
| 항목 | 내용 |
|------|------|
| 설명 | 캐릭터 탭 순서 드래그앤드롭으로 변경 |
| 범위 | 같은 서버 내 캐릭터 간 순서 변경 |

---

## 3. 숙제 관리 (일일/주간)

### FN-HW-001. 숙제 체크
| 항목 | 내용 |
|------|------|
| 설명 | 숙제 완료 상태 토글 |
| 동작 | 체크박스 클릭 시 completedCount 증가/감소 |
| 다중 체크박스 | totalCount에 따라 1~10개 체크박스 표시 |
| 완료 판정 | completedCount >= totalCount |

### FN-HW-002. 숙제 추가
| 항목 | 내용 |
|------|------|
| 설명 | 새로운 숙제 카드 생성 |
| 트리거 | "숙제 추가" 버튼 -> AddCardModal에서 "일일 숙제" 또는 "주간 숙제" 선택 |
| 입력 | 숙제 이름, 보상(선택), 체크박스 수, 범위(캐릭터/서버) |
| 동기화 | **모든 캐릭터에 동일하게 추가** |

### FN-HW-003. 숙제 수정
| 항목 | 내용 |
|------|------|
| 설명 | 기존 숙제 카드 내용 편집 |
| 트리거 | 카드의 연필 아이콘 클릭 |
| 수정 가능 | 숙제 이름, 보상, 체크박스 수, 범위(캐릭터/서버) |
| 동기화 | **모든 캐릭터에 동일하게 반영** (인덱스 기반) |

### FN-HW-004. 숙제 삭제
| 항목 | 내용 |
|------|------|
| 설명 | 숙제 카드 삭제 |
| 트리거 | 카드의 쓰레기통 아이콘 -> 확인 모달 |
| 동기화 | **모든 캐릭터에서 동일 위치 카드 삭제** |

### FN-HW-005. 숙제 순서 변경
| 항목 | 내용 |
|------|------|
| 설명 | 드래그앤드롭으로 카드 순서 변경 |
| 동기화 | **모든 캐릭터에 동일하게 반영** |

### FN-HW-006. 숙제 즐겨찾기
| 항목 | 내용 |
|------|------|
| 설명 | 별표(★) 토글로 즐겨찾기 설정/해제 |
| 범위 | **캐릭터별 독립 적용** (다른 캐릭터에 영향 없음) |
| 필터 | 즐겨찾기 필터 활성화 시 ★ 항목만 표시 |

---

## 4. 구매 관리

### FN-PUR-001. 구매 체크
| 항목 | 내용 |
|------|------|
| 설명 | 구매 완료 여부 토글 |
| 동작 | 체크박스 클릭 시 completed 토글 |

### FN-PUR-002. 구매 카드 추가
| 항목 | 내용 |
|------|------|
| 트리거 | AddCardModal > "구매" 탭 선택 |
| 입력 | 아이템 이름, 지역(드롭다운), NPC 이름(선택), 주기(일간/주간), 범위(캐릭터/서버) |
| 동기화 | **모든 캐릭터에 추가** |

### FN-PUR-003. 구매 카드 수정
| 항목 | 내용 |
|------|------|
| 수정 가능 | 아이템 이름, 지역, NPC(태그 형태), 주기(일간/주간), 범위 |
| 동기화 | **모든 캐릭터에 반영** |

### FN-PUR-004. 구매 카드 삭제
| 동기화 | **모든 캐릭터에서 삭제** |

### FN-PUR-005. 구매 카드 순서 변경 / 즐겨찾기
| 순서 변경 | 드래그앤드롭, 모든 캐릭터 동기화 |
| 즐겨찾기 | 캐릭터별 독립 적용 |

---

## 5. 물물교환 관리

구매 관리(FN-PUR)와 동일한 구조.  
카드 타입이 `trade`이며, NPC 물물교환 아이템을 관리한다.

| 기능 ID | 설명 |
|---------|------|
| FN-TRD-001 | 물물교환 체크 |
| FN-TRD-002 | 물물교환 카드 추가 |
| FN-TRD-003 | 물물교환 카드 수정 |
| FN-TRD-004 | 물물교환 카드 삭제 |
| FN-TRD-005 | 물물교환 카드 순서 변경 / 즐겨찾기 |

---

## 6. 임무게시판 관리

### FN-SCR-001. 임무게시판 체크
| 항목 | 내용 |
|------|------|
| 설명 | 스크롤 완료 상태 토글 |
| 동작 | 다중 체크박스 (기본 3개, 최대 10개) |
| 완료 판정 | completedCount >= totalCount |

### FN-SCR-002. 임무게시판 카드 추가
| 항목 | 내용 |
|------|------|
| 트리거 | AddCardModal > "임무게시판" 탭 선택 |
| 입력 | 스크롤 이름, 스크롤 타입(제작/채집/요리/토벌), 주기(일간/주간), 지역(드롭다운), 체크박스 수, 재료(토벌 시 숨김), 보상(선택) |
| 동기화 | **모든 캐릭터에 추가** |

### FN-SCR-003. 임무게시판 카드 수정
| 항목 | 내용 |
|------|------|
| 수정 가능 | 스크롤 이름, 타입, 주기(일간/주간), 지역, 체크박스 수, 재료, 보상 |
| 동기화 | **모든 캐릭터에 반영** |

### FN-SCR-004. 임무게시판 카드 삭제
| 동기화 | **모든 캐릭터에서 삭제** |

### FN-SCR-005. 임무게시판 카드 순서 변경 / 즐겨찾기
| 순서 변경 | 드래그앤드롭, 모든 캐릭터 동기화 |
| 즐겨찾기 | 캐릭터별 독립 적용 |

### FN-SCR-006. 스크롤 타입별 UI
| 타입 | 색상 | 재료 표시 |
|------|------|----------|
| 제작 | 인디고 | O |
| 채집 | 에메랄드 | O |
| 요리 | 앰버 | O |
| 토벌 | 레드 | X (숨김) |

---

## 7. 프리셋 관리

### FN-PRE-001. 기본 프리셋
| 항목 | 내용 |
|------|------|
| 이름 | "기본 숙제 설정" |
| ID | `__default__` |
| 포함 | 기본 숙제 + 기본 구매 + 기본 물물교환 + 기본 임무게시판 |
| 삭제 | 불가 |

### FN-PRE-002. 프리셋 저장
| 항목 | 내용 |
|------|------|
| 설명 | 현재 캐릭터의 숙제/구매/물물교환/임무게시판 구성을 프리셋으로 저장 |
| 트리거 | 숙제 설정 > `현재 리스트 저장` |
| 저장 항목 | 카드 이름, 보상, 주기, 범위, 체크박스 수 등 |
| 제외 항목 | **즐겨찾기(isFavorite)**, completedCount, completed, id |

### FN-PRE-003. 프리셋 불러오기
| 항목 | 내용 |
|------|------|
| 설명 | 저장된 프리셋을 카드 리스트 템플릿으로 적용 |
| 트리거 | 숙제 설정 > `저장한 리스트` |
| 동작 | 등록된 캐릭터들의 숙제/구매/물물교환/임무게시판 전체 교체 |
| 상태 보존 | 동일 카드 매칭 시 기존 체크 상태와 즐겨찾기를 `savedItemStates` 기준으로 최대한 복원 |

### FN-PRE-004. 프리셋 삭제
| 제한 | 기본 프리셋(`__default__`)은 삭제 불가 |

### FN-PRE-005. 백업/복원
| 항목 | 내용 |
|------|------|
| 트리거 | 숙제 설정 > `백업/복원` |
| UI | 모달 안에 `백업 파일 저장`, `백업 파일 가져오기`, `닫기` 버튼 표시 |
| 내보내기 | 현재 캐릭터 구성을 JSON 파일로 다운로드 |
| 가져오기 | JSON 파일을 업로드하여 현재 캐릭터에 적용 |
| 보존 | 가져오기 전후 기존 캐릭터의 체크 상태와 즐겨찾기를 가능한 범위에서 보존 |

### FN-PRE-006. 빈 리스트로 시작
| 항목 | 내용 |
|------|------|
| 설명 | 기본 카드 없이 빈 리스트에서 사용자가 직접 카드 구성을 만들 수 있음 |
| 트리거 | 숙제 설정 > `빈 리스트로 시작` |
| 기존 카드 있음 | `저장 후 새로 만들기 / 저장하지 않고 새로 만들기 / 취소` 모달 표시 |
| 기존 카드 없음 | 즉시 빈 리스트 상태 유지 |
| 동작 | 등록된 캐릭터들의 숙제/구매/물물교환/임무게시판 리스트를 빈 배열로 초기화 |

### FN-PRE-007. 기본 숙제 설정 불러오기
| 항목 | 내용 |
|------|------|
| 설명 | 빈 리스트 상태에서 관리자 기본 카드 리스트를 불러옴 |
| 트리거 | 빈 상태 화면의 `기본 숙제 설정 불러오기` 버튼 |
| 기준 데이터 | Firestore published 기본 카드, 없으면 코드 기본값 |
| 동작 | 등록된 캐릭터들의 기본 카드 리스트를 생성 |

---

## 8. 데이터 관리

### FN-DATA-001. 전체 데이터 내보내기
| 항목 | 내용 |
|------|------|
| 설명 | 전체 계정 데이터를 JSON 파일로 다운로드 |
| 트리거 | 헤더의 Download 아이콘 클릭 (게스트 모드) |
| 파일명 | `mobi-account-data-YYYY-MM-DD.json` |

### FN-DATA-002. 전체 데이터 가져오기
| 항목 | 내용 |
|------|------|
| 설명 | JSON 파일을 업로드하여 전체 데이터 복원 |
| 트리거 | 헤더의 Upload 아이콘 클릭 (게스트 모드) |
| 동작 | 확인 모달 표시 -> 승인 시 현재 데이터 덮어쓰기 + 페이지 새로고침 |
| 검증 | characters, homework 필드 존재 여부 확인 |

### FN-DATA-003. 체크박스 전체 해제
| 항목 | 내용 |
|------|------|
| 설명 | 현재 카드 리스트의 체크 상태를 전체 해제 |
| 트리거 | 전체 진행도 > `체크 초기화` 버튼 |
| 주의 | 카드 구성 자체를 기본값으로 되돌리는 기능이 아님 |

---

## 9. 리셋 시스템

### FN-RESET-001. 일간 리셋
| 항목 | 내용 |
|------|------|
| 시각 | 매일 오전 06:00 KST (= UTC 전날 21:00) |
| 대상 | period="daily"인 모든 항목 |
| 숙제 | completedCount -> 0 |
| 구매/물물교환 | completed -> false |
| 임무게시판 | completedCount -> 0 |
| 기록 | lastDailyReset 갱신 |

### FN-RESET-002. 주간 리셋
| 항목 | 내용 |
|------|------|
| 시각 | 매주 월요일 오전 06:00 KST |
| 대상 | period="weekly"인 모든 항목 |
| 숙제 | completedCount -> 0 |
| 구매/물물교환 | completed -> false |
| 임무게시판 | completedCount -> 0 |
| 기록 | lastWeeklyReset 갱신 |

### FN-RESET-003. 리셋 체크 타이밍
| 항목 | 내용 |
|------|------|
| 트리거 | 앱 로드 시 (loadData -> applyResets) |
| 비교 | lastDailyReset / lastWeeklyReset vs 현재 리셋 기준 시각 |
| 저장 | 리셋 발생 시 자동 저장 (saveData) |

### FN-RESET-004. 주간 리셋 카운트다운
| 항목 | 내용 |
|------|------|
| 설명 | 다음 주간 리셋까지 남은 시간 표시 |
| 위치 | 대시보드 상단 (WeeklyCountdown 컴포넌트) |
| 형식 | "X일 XX:XX:XX" |

---

## 10. UI/UX 기능

### FN-UI-001. 카테고리 탭 (PeriodToggle)
| 탭 | 표시 내용 |
|----|----------|
| 전체 | 일일숙제 + 주간숙제 + 구매 + 물물교환 + 임무게시판 통합 리스트 |
| 일일 | 일일 숙제만 |
| 주간 | 주간 숙제만 |
| 구매 | 구매 카드만 |
| 물물교환 | 물물교환 카드만 |
| 임무게시판 | 임무게시판 카드만 |
| 이벤트 | (준비 중) |

### FN-UI-001-1. 보기 전환
| 항목 | 내용 |
|------|------|
| 캐릭터 전체 보기 | 숙제명/카드 정보를 왼쪽에 두고 오른쪽에 캐릭터별 체크 컬럼을 표시 |
| 캐릭터별로 보기 | 기존 캐릭터 탭 기반 카드 리스트 표시 |
| 모바일 | 캐릭터 전체 보기는 카드 하단에 캐릭터 체크 칩을 배치하는 모바일 전용 UI 사용 |

### FN-UI-002. 진행률 바 (ProgressBar)
| 항목 | 내용 |
|------|------|
| 표시 | 완료/전체 개수, 퍼센트(%) |
| 카테고리별 | 일일/주간/구매/물물교환/임무게시판 각각의 진행률 |
| 즐겨찾기 | 즐겨찾기 필터 토글 포함 |

### FN-UI-003. 서버 탭 (ServerTabs)
| 항목 | 내용 |
|------|------|
| 표시 | 캐릭터가 등록된 서버만 탭으로 표시 |
| 동작 | 서버 선택 시 해당 서버의 캐릭터 목록 표시 |

### FN-UI-004. 드래그앤드롭 (SortableList)
| 항목 | 내용 |
|------|------|
| 라이브러리 | @dnd-kit/core, @dnd-kit/sortable |
| 대상 | 숙제/구매/물물교환/임무게시판 카드, 전체 탭 통합 리스트, 캐릭터 탭 |
| 핸들 | 좌측 점 6개 아이콘 |
| 전체 탭 | 카드 타입과 무관하게 하나의 리스트에서 순서 변경 가능 |

### FN-UI-005. 카드 뱃지 시스템
| 뱃지 | 색상 | 설명 |
|------|------|------|
| 일간 | 주황 (orange) | period="daily" |
| 주간 | 초록 (green) | period="weekly" |
| 서버 | 청록 (teal) | scope="server" |
| 지역별 | 고유 색상 | 8개 지역 각각 고유 색상 |
| 스크롤 타입 | 고유 색상 | 제작/채집/요리/토벌 |

### FN-UI-006. 지역 색상 매핑
| 지역 | 색상 |
|------|------|
| 콜헨 | 레드 |
| 티르코네일 | 스카이 |
| 두갈드아일 | 앰버 |
| 던바튼 | 바이올렛 |
| 가이레흐 언덕 | 핑크 |
| 반호르 | 오렌지 |
| 이멘마하 | 시안 |
| 캐시샵 | 퓨시아 |

### FN-UI-007. 삭제 확인 모달
| 항목 | 내용 |
|------|------|
| 대상 | 숙제/구매/물물교환/임무게시판 카드 삭제 시 |
| 동작 | "'카드명'을 삭제하시겠습니까?" 확인 모달 표시 |

### FN-UI-008. 로그아웃 경고 모달
| 항목 | 내용 |
|------|------|
| 설명 | 로그아웃 시 데이터 백업 권장 안내 |
| 테마 | 앰버(경고) 색상 |
| 안내 | "계정 데이터 내보내기" 기능 사용 권장 |

### FN-UI-009. Dev 환경 표시
| 항목 | 내용 |
|------|------|
| 조건 | 현재 호스트명에 `-git-dev-`가 포함된 Vercel dev 프리뷰 |
| 표시 | 헤더 `mobimobi`를 레드 컬러로 표시하고 `dev` 태그 추가 |
| 목적 | production 화면과 dev 화면의 혼동 방지 |

---

## 11. 파일 구조

```
src/
  app/
    layout.tsx          # 루트 레이아웃 (메타데이터, 폰트)
    page.tsx            # 메인 페이지 (로그인/대시보드)
    ctrl-a7x9k2m/
      page.tsx          # 관리자 기본 카드 관리 페이지
  components/
    AddCardModal.tsx    # 카드 추가 모달 (숙제/구매/물물교환/임무게시판)
    CharacterCreateModal.tsx  # 캐릭터 생성 모달
    CharacterEditModal.tsx    # 캐릭터 편집 모달
    CharacterTabs.tsx   # 캐릭터 탭 (드래그 가능)
    HomeworkCard.tsx     # 숙제 카드 (일일/주간)
    HomeworkToolbar.tsx  # 숙제 툴바 (프리셋 관리)
    PeriodToggle.tsx     # 카테고리 탭 (전체/일일/주간/구매/물물교환/임무게시판/이벤트)
    ProfileModal.tsx     # 프로필/설정 모달
    ProgressBar.tsx      # 진행률 바
    ScrollCard.tsx       # 임무게시판 카드
    ServerTabs.tsx       # 서버 탭
    ShopCard.tsx         # 구매/물물교환 카드
    SortableList.tsx     # 드래그앤드롭 리스트 래퍼
    WeeklyCountdown.tsx  # 주간 리셋 카운트다운
  hooks/
    useAppState.ts      # 핵심 상태 관리 Hook (CRUD, 동기화, 프리셋)
    useAuth.ts          # 인증 상태 관리 Hook (Google Auth, 게스트)
  lib/
    adminFirestore.ts   # 관리자 기본 카드 Firestore 유틸리티
    defaultCards.ts     # 환경별 기본 카드 로드 유틸리티
    firebase.ts         # Firebase 초기화 설정
    firestore.ts        # Firestore CRUD 유틸리티
    storage.ts          # localStorage 관리, 리셋 로직, 기본 데이터 생성
  types/
    index.ts            # 전체 타입/인터페이스/상수 정의
```

---

## 12. 데이터 모델

### 12.1 Character
```typescript
interface Character {
  id: string;          // "char_" + timestamp
  server: ServerName;  // 8개 서버 중 택 1
  name: string;        // 캐릭터 닉네임
  mainClass: string;   // 메인 클래스 계열
  subClass: string;    // 세부 직업
  allTabOrder?: string[]; // 전체 탭 통합 정렬 순서
}
```

### 12.2 HomeworkItem
```typescript
interface HomeworkItem {
  id: string;              // "{charId}_hw_{index}"
  title: string;           // 숙제 이름
  reward: string;          // 보상 정보
  period: PeriodType;      // "daily" | "weekly"
  totalCount: number;      // 체크박스 수 (1~10)
  completedCount: number;  // 완료 체크 수
  isFavorite: boolean;     // 즐겨찾기 (캐릭터별 독립)
  scope?: ScopeType;       // "character" | "server"
}
```

### 12.3 ShopItem (구매 / 물물교환)
```typescript
interface ShopItem {
  id: string;           // "{charId}_pur_{ts}" 또는 "{charId}_trd_{ts}"
  itemName: string;     // 아이템 이름
  region: RegionName;   // 지역 (8개 중 택 1)
  npcName: string;      // NPC 이름 (쉼표 구분 다중 태그)
  period: PeriodType;   // "daily" | "weekly"
  completed: boolean;   // 완료 여부
  isFavorite: boolean;  // 즐겨찾기 (캐릭터별 독립)
  scope?: ScopeType;    // "character" | "server"
}
```

### 12.4 ScrollItem (임무게시판)
```typescript
interface ScrollItem {
  id: string;              // "{charId}_scroll_{index}"
  title: string;           // 스크롤 이름
  scrollType: ScrollType;  // "제작" | "채집" | "요리" | "토벌"
  period: PeriodType;      // "daily" | "weekly"
  totalCount: number;      // 체크박스 수 (기본 3, 최대 10)
  completedCount: number;  // 완료 체크 수
  isFavorite: boolean;     // 즐겨찾기 (캐릭터별 독립)
  scope?: ScopeType;       // "character" | "server"
  region: RegionName;      // 지역
  materials: string[];     // 재료 목록 (토벌 시 숨김)
  reward: string;          // 보상 정보
  tags?: string[];         // 추가 태그 (예비)
}
```

### 12.5 HomeworkPreset
```typescript
interface HomeworkPreset {
  id: string;
  name: string;
  createdAt: string;
  homework: Omit<HomeworkItem, "id" | "completedCount" | "isFavorite">[];
  purchaseItems: Omit<ShopItem, "id" | "completed" | "isFavorite">[];
  tradeItems: Omit<ShopItem, "id" | "completed" | "isFavorite">[];
}
```

### 12.6 AppData (전체 저장 구조)
```typescript
interface AppData {
  characters: Character[];
  homework: Record<string, HomeworkItem[]>;       // charId -> items
  purchaseItems: Record<string, ShopItem[]>;      // charId -> items
  tradeItems: Record<string, ShopItem[]>;         // charId -> items
  scrollItems?: Record<string, ScrollItem[]>;     // charId -> items
  lastDailyReset: string;   // ISO 8601
  lastWeeklyReset: string;  // ISO 8601
  presets?: HomeworkPreset[];
  savedItemStates?: Record<string, unknown>; // 프리셋/기본 카드 동기화 시 체크/즐겨찾기 복원용
}
```

---

## 13. 기본 데이터 목록

### 13.1 기본 일일 숙제 (9개)
| 이름 | 보상 | 범위 |
|------|------|------|
| 우편함 확인 | 보상 없음 | 캐릭터 |
| 빛나는 동굴 클리어 | 성수 1개, 하트 토큰 1개, 아르바이트 120 | 캐릭터 |
| 심층 던전 | 하트 토큰 2개, 성수 1개 | 캐릭터 |
| 은동전 30개 사용 | - | 캐릭터 |
| 보석 승급하기 | - | 캐릭터 |
| 일일 미션 보상 확인 | - | 캐릭터 |
| 모험가 패스 확인 | - | 캐릭터 |
| 이벤트 보상 확인 | - | 캐릭터 |
| 가공하기 | - | 캐릭터 |

### 13.2 기본 주간 숙제 (12개)
| 이름 | 범위 |
|------|------|
| 모험가 길드 정기 의뢰 | 캐릭터 |
| 뱅가드 브리치 3회 | 캐릭터 |
| 어비스 4종 매우어려움 | 캐릭터 |
| 타바르타스 매우어려움 | 캐릭터 |
| 에이렐 어려움 | 캐릭터 |
| 화이트 서큐버스 매우어려움 | 캐릭터 |
| 글라스기브넨 매우어려움 | 캐릭터 |
| 주간 어비스 3회 | 캐릭터 |
| 주간 레이드 | 캐릭터 |
| 불길한 소환의 결계 7회 | 캐릭터 |
| 검은 구멍 14회 | 캐릭터 |
| 필드 보스 3회 | 캐릭터 |

### 13.3 기본 구매 (3개)
| 이름 | 지역 | NPC | 주기 | 범위 |
|------|------|-----|------|------|
| 보석 보물 상자 구매 10개(서버) | 캐시샵 | 골드 | 일간 | 서버 |
| 매일 무료 상품 구매 1개(서버) | 캐시샵 | 추천픽 | 일간 | 서버 |
| 성수 5개 | 던바튼 | 크리스텔(봉헌소) | 주간 | 서버 |

### 13.4 기본 물물교환 (6개)
| 이름 | 지역 | NPC | 주기 | 범위 |
|------|------|-----|------|------|
| 우유10 -> 케이틴 특제 통밀빵3 | 티르코네일 | 케이틴(식료품점) | 주간 | 캐릭터 |
| 케이틴 특제 통밀빵10 -> 성수10(서버) | 티르코네일 | 엔델리온(봉헌소) | 주간 | 캐릭터 |
| 호박 수프4 -> 최상급 가죽+2 | 이멘마하 | 델렌(잡화점) | 주간 | 캐릭터 |
| 호박 수프4 -> 최상급 목재+2 | 이멘마하 | 델렌(잡화점) | 주간 | 캐릭터 |
| 카레라이스4 -> 운철괴2 | 이멘마하 | 오슬라(무기점) | 주간 | 캐릭터 |
| 농어 매운탕1 -> 은합금괴10 | 반호르 | 아이데른(대장간) | 주간 | 캐릭터 |

### 13.5 기본 임무게시판 (43개)
전체 43개 스크롤이 5개 지역에 분포, 모두 **주간** 주기.

| 지역 | 제작 | 채집 | 요리 | 토벌 | 합계 |
|------|------|------|------|------|------|
| 이멘마하 | 3 | 2 | 1 | 1 | 7 |
| 반호르 | 3 | 2 | 1 | 1 | 7 |
| 던바튼 | 3 | 5 | 1 | 1 | 10 |
| 티르코네일 | 2 | 5 | 1 | 1 | 9 |
| 콜헨 | 3 | 5 | 1 | 1 | 10 |
| **합계** | **14** | **19** | **5** | **5** | **43** |

---

## 14. 관리자 기능

### FN-ADMIN-001. 관리자 접근
| 항목 | 내용 |
|------|------|
| 경로 | `/ctrl-a7x9k2m` |
| 진입 | 승인 계정으로 로그인한 경우 설정 모달의 `문의하기` 아래 `관리자` 메뉴 표시 |
| 승인 이메일 | `inchu594@gmail.com`, `danbari1226@gmail.com` |
| 판별 | `NEXT_PUBLIC_ADMIN_EMAIL` + 코드 fallback 이메일, `user.email` 및 `providerData[].email` 확인 |
| 미승인 | 권한 확인 화면 표시 후 홈 이동 버튼 제공 |

### FN-ADMIN-002. 기본 카드 CRUD
| 항목 | 내용 |
|------|------|
| 대상 | 숙제, 구매, 물물교환, 임무게시판 기본 카드 |
| 기능 | 카드 추가, 수정, 삭제 |
| 저장 전 검증 | Firestore에 `undefined` 필드가 들어가지 않도록 정규화 |

### FN-ADMIN-003. Dev 저장
| 항목 | 내용 |
|------|------|
| 버튼명 | `Dev 저장` |
| Firestore 경로 | `defaultCards/draft` |
| 목적 | production 반영 전 dev/localhost 기준 기본 카드 확인 |
| 성공 메시지 | `Dev 저장 완료 - 개발 섭에서 확인하세요` |
| 실패 메시지 | Firebase 오류 코드와 원인을 12초 동안 표시 |

### FN-ADMIN-004. 실섭 업로드
| 항목 | 내용 |
|------|------|
| 버튼명 | `실섭 업로드` |
| Firestore 경로 | `defaultCards/published` |
| 동작 | 현재 편집 데이터를 published에 저장하고 draft를 삭제 |
| 히스토리 | `defaultCardsHistory`에 변경 요약과 데이터 저장 |
| 영향 | 모든 production 사용자에게 기본 카드 변경사항 반영 |

### FN-ADMIN-005. 히스토리 및 롤백
| 항목 | 내용 |
|------|------|
| 목록 | 최신순 히스토리 표시 |
| 롤백 | 선택한 히스토리 데이터를 published로 복원 |
| 후속 정리 | 14일 후 자동삭제 정책은 Firestore TTL 또는 별도 정리 방식 검토 필요 |

### FN-ADMIN-006. Firestore 보안 규칙
| 항목 | 내용 |
|------|------|
| 사용자 데이터 | `users/{userId}`는 본인만 읽기/쓰기 가능 |
| published | 모든 사용자 읽기 가능, 관리자만 쓰기 가능 |
| draft/history | 관리자만 읽기/쓰기 가능 |
| 관리 방식 | `firestore.rules` 파일로 관리하며 Firebase Console 또는 Firebase CLI로 게시 |
